# React_Smell_Analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
react_smell_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: cli.py  orchestrator.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/external_tools/: dirty_waters_adapter.py  knip_adapter.py
src/smells/: aliased_packages.py  depends_on_fork.py  deprecated_dependency.py  dirty_waters_common.py  installation_scripts.py  missing_dependency.py  no_build_attestation.py  no_invalid_code_signature.py  no_source_code_link.py  no_source_code_sha.py  registry.py  unmaintained_package.py  unused_dependency.py
test_projects/sample_installation_scripts/: package-lock.json  package.json
test_projects/sample_knip/: package.json
test_projects/sample_knip/src/: index.js
