[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "react-smell-analyzer"
version = "0.1.0"
description = "CLI tool for detecting selected software supply chain smells in React/npm projects"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["src"]

[project.scripts]
react-smell-analyzer = "src.cli:run"

